modified to ignore all building and compiling files -- created by IDE

--- a/C++/.gitignore
+++ b/C++/.gitignore
@@ -2,6 +2,8 @@
 # only source code is provided
 */bin/
 */obj/
-*/*.cbp
-*/*.depend
-*/*.layout
+**/*.cbp
+**/*.depend
+**/*.layout
+**/*.o 
+**/*.exe
